--- a/Tensorflow_2_0_MNIST.ipynb
+++ b/Tensorflow_2_0_MNIST.ipynb
@@ -120,7 +120,7 @@
         }
       },
       "source": [
-        "$Normalized image \n",
+        "#Normalized image \n",
         "plt.imshow(x_train[30],cmap=plt.cm.binary)"
       ],
       "execution_count": 0,
